--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "body-parser": "~1.0.2",
     "coffee-script": "^1.9.2",
+    "cors": "^2.7.1",
     "express": "~4.1.1",
     "mmdb-reader": "^1.0.0",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "request-ip": "^1.2.2"
   },
   "scripts": {
     "start": "coffee -w app.coffee"
